Fixing vendors in keyframes to solve issue on Safari

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -174,22 +174,18 @@ ul {
 @-webkit-keyframes rotating /* Safari and Chrome */ {
   from {
     -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
   }
   to {
     -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
   }
 }
 @keyframes rotating {
   from {
     -ms-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
   to {
     -ms-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
